chore: added missing tests

--- a/packages/desktop-app/src/app/components/lock-page/lock-page.component.html
+++ b/packages/desktop-app/src/app/components/lock-page/lock-page.component.html
@@ -9,7 +9,7 @@
       <div class="letter-avatar"><span>{{initials}}</span></div>
       <div class="email-and-name">
         <div class="name">{{name}}</div>
-        <div class="email">{{email.value}}</div>
+        <div class="email">{{email?.value}}</div>
       </div>
     </div>
 
