chore: removed fiscal code for pro from this release

--- a/packages/desktop-app/src/app/components/dialogs/leapp-pro-pre-checkout-dialog/leapp-pro-pre-checkout-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/leapp-pro-pre-checkout-dialog/leapp-pro-pre-checkout-dialog.component.html
@@ -22,14 +22,14 @@
                (keyup)="checkAndConfirm();">
         <small class="text-error" *ngIf="(emailFormControl.dirty || emailFormControl.touched) && emailFormControl.errors">Insert a valid email address</small>
       </div>
-      <small><strong>Fiscal Code (only for italian customers)</strong></small>
-      <br>
-      <div class="form-field">
-        <!-- <label>Email address*</label> -->
-        <input spellcheck="false" formControlName="fiscalCode" type="text" class="form-control" placeholder="fiscal code, only for italian customers"
-               (keyup)="checkAndConfirm();">
-        <small class="text-error" *ngIf="(fiscalCodeFormControl.dirty || fiscalCodeFormControl.touched) && fiscalCodeFormControl.errors">Insert a valid fiscal code</small>
-      </div>
+<!--      <small><strong>Fiscal Code (only for italian customers)</strong></small>-->
+<!--      <br>-->
+<!--      <div class="form-field">-->
+<!--        &lt;!&ndash; <label>Email address*</label> &ndash;&gt;-->
+<!--        <input spellcheck="false" formControlName="fiscalCode" type="text" class="form-control" placeholder="fiscal code, only for italian customers"-->
+<!--               (keyup)="checkAndConfirm();">-->
+<!--        <small class="text-error" *ngIf="(fiscalCodeFormControl.dirty || fiscalCodeFormControl.touched) && fiscalCodeFormControl.errors">Insert a valid fiscal code</small>-->
+<!--      </div>-->
     </form>
     <br>
     <br>
