--- a/packages/desktop-app/src/app/components/lock-page/lock-page.component.html
+++ b/packages/desktop-app/src/app/components/lock-page/lock-page.component.html
@@ -11,6 +11,7 @@
         <div class="name">{{name}}</div>
         <div class="email">{{email?.value}}</div>
       </div>
+      <div class="team-name">{{teamName}}</div>
     </div>
 
     <div class="form-psw-container">
